--- a/docs/010-faq.md
+++ b/docs/010-faq.md
@@ -11,7 +11,7 @@ QuizWitz is a party game and is meant to be played with a bunch of people sittin
 Therefor it is not possible to join a game that someone you don't know has started.
 
 ## Why can I only play 7 questions?
-You can only play 7 random questions in Round-Abouts.  Round-Abouts are sets of questions about a specific subject 
+You can only play 7 random questions in Round-Abouts. Round-Abouts are sets of questions about a specific subject 
 (like, for example 'Shoes worn by historic figures' or 'Fruits starting with A'). They are meant to be published and 
 shared with the community. Other players then include these Round-Abouts in their Collection. When they start a game 
 from their collection, the game picks 5 Round-Abouts at random, picks 7 questions from each Round-About and 
@@ -20,7 +20,15 @@ users these to generate a random quiz.
 If you want to create a custom quiz where all questions are shown in the order you have entered them, you need to 
 create a Quiz. In Quizzes you get full control of the order of the rounds and questions, and nothing is randomized.
 
-## I want to create a quiz with questions in a specific order
+## Why are the questions asked in a random order?
+You have likely created a Round-About. Round-Abouts are sets of questions about a specific subject and are meant to be 
+published and shared with the community. Other users can then add these Round-Abouts to their collection and start 
+quizzes with a randomized selection of questions in their collected Round-Abouts.
+
+If you want to create a custom quiz where all questions are shown in the order you have entered them, you need to
+create a Quiz. In Quizzes you get full control of the order of the rounds and questions, and nothing is randomized.
+
+## How do I create a quiz?
 To create a quiz, click the 'Create' button on top and then select 'Quiz'. Please note that Quizzes are only available 
 for users with a  Premium license. Round-Abouts are free, but in those rounds you are not able to specify the order or 
 the amount of questions.
@@ -29,3 +37,21 @@ If you want to first test out our software before buying a premium account, plea
 activate the 'Free example quiz'. This will add a demo quiz to your Collection that you will be able to edit to 
 experience our software before buying it.
 
+## Can I get a report of all players answers?
+When using the QuizWitz PRO module you do get an email with a link to a Report that contains all answers that players 
+have given. We do not provide a report for Conference of Party games.
+
+## What is the difference between a Premium account and PRO games?
+A premium account allows you to play the regular QuizWitz game with up to 1000 players. (100 in party mode or 1000 in 
+conference mode). These modes should be sufficient for most use cases. We charge a yearly fee for Premium accounts.
+
+Our QuizWitz PRO game modes are aimed towards professional quizmasters who want to take their games to an extra level. 
+Instead of paying a periodic fee, PRO games are charged per player. For more information on pricing of PRO games, 
+please visit our [QuizWitz PRO seats page](https://app.quizwitz.com/seats).
+
+## Can players customize their name in the game?
+Yes! In Party games, players can choose their name by registering a QuizWitz account on their own smartphone. They 
+can then also change their profile picture that will appear in the game.
+
+Don't want the hassle of one-time registration? Then select the 'Conference' mode (also available in QuizWitz PRO). 
+Players will then first be asked to choose a name before joining the game and won't have to login or register.
