Add a few faqs.

--- a/docs/010-faq.md
+++ b/docs/010-faq.md
@@ -6,10 +6,6 @@ sidebar_position: 10
 
 # Frequently asked questions
 
-## How do I join a game?
-QuizWitz is a party game and is meant to be played with a bunch of people sitting in the same room or videostream call.
-Therefor it is not possible to join a game that someone you don't know has started.
-
 ## Why can I only play 7 questions?
 You can only play 7 random questions in Round-Abouts. Round-Abouts are sets of questions about a specific subject 
 (like, for example 'Shoes worn by historic figures' or 'Fruits starting with A'). They are meant to be published and 
@@ -49,9 +45,25 @@ Our QuizWitz PRO game modes are aimed towards professional quizmasters who want 
 Instead of paying a periodic fee, PRO games are charged per player. For more information on pricing of PRO games, 
 please visit our [QuizWitz PRO seats page](https://app.quizwitz.com/seats).
 
-## Can players customize their name in the game?
+## Can players choose their own name?
 Yes! In Party games, players can choose their name by registering a QuizWitz account on their own smartphone. They 
 can then also change their profile picture that will appear in the game.
 
 Don't want the hassle of one-time registration? Then select the 'Conference' mode (also available in QuizWitz PRO). 
 Players will then first be asked to choose a name before joining the game and won't have to login or register.
+
+## How do I join a quiz?
+Please navigate to [www.quizwitz.tv](https://www.quizwitz.tv) and enter your code. Note that you should be able to see the game screen in order 
+to play, as otherwise you might miss essential information.
+
+## How do I join a game?
+QuizWitz is a party game and is meant to be played with a bunch of people sitting in the same room or videostream call.
+Therefor it is not possible to join a game that someone you don't know has started.
+
+To join a game, please go to [www.quizwitz.tv](https://www.quizwitz.tv) and enter the code you see on the game screen.
+
+## How can I play a game with my friends?
+QuizWitz is a party game and is meant to be played with a bunch of people sitting in the same room or videostream call.
+Therefor it is not possible to join a game that someone you don't know has started.
+
+To join a game, please go to [www.quizwitz.tv](https://www.quizwitz.tv) and enter the code you see on the game screen.
