Adding round modes

--- a/docs/010-faq.md
+++ b/docs/010-faq.md
@@ -61,3 +61,12 @@ QuizWitz is a party game and is meant to be played with a bunch of people sittin
 Therefor it is not possible to join a game that someone you don't know has started.
 
 To join a game, please go to [www.quizwitz.tv](https://www.quizwitz.tv) and enter the code you see on the game screen.
+
+## How can I make the game screen larger / fullscreen?
+There are two ways to make the game screen larger:
+
+1. Hover over the bottom of the game screen. You should see a slider to control the audio, with on the right a little square. 
+Click the square to enter fullscreen mode.
+
+2. Another way is to select 'Advanced game settings' and to generate a unique link for your quiz. 
+Open this link on any browser to play the game in fullscreen mode.
