Add quizmaster app to faq.

--- a/docs/010-faq.md
+++ b/docs/010-faq.md
@@ -70,3 +70,11 @@ Click the square to enter fullscreen mode.
 
 2. Another way is to select 'Advanced game settings' and to generate a unique link for your quiz. 
 Open this link on any browser to play the game in fullscreen mode.
+
+## Is there a way to pause the quiz?
+Yes! You can pause the game by moving your mouse cursor to the bottom of the screen. A 'pause' button will appear.
+
+However, if you want even more control of the game, you should check out the 'QuizWitz Live' game mode. In this mode the
+quiz is controlled with the Quizmaster App, giving your complete control of the pacing of the quiz.
+
+More information on the quizmaster app can be found at [quizwitz.com/quizmaster-app](https://www.quizwitz.com/quizmaster-app).
