--- a/docs/010-faq.md
+++ b/docs/010-faq.md
@@ -6,75 +6,134 @@ sidebar_position: 10
 
 # Frequently asked questions
 
-## Why can I only play 7 questions?
-You can only play 7 random questions in Round-Abouts. Round-Abouts are sets of questions about a specific subject 
-(like, for example 'Shoes worn by historic figures' or 'Fruits starting with A'). They are meant to be published and 
-shared with the community. Other players then include these Round-Abouts in their Collection. When they start a game 
-from their collection, the game picks 5 Round-Abouts at random, picks 7 questions from each Round-About and 
-users these to generate a random quiz.
+---
 
-If you want to create a custom quiz where all questions are shown in the order you have entered them, you need to 
-create a Quiz. In Quizzes you get full control of the order of the rounds and questions, and nothing is randomized.
+## ❓ Why can I only play 7 questions?
 
-## Why are the questions asked in a random order?
-You have likely created a Round-About. Round-Abouts are sets of questions about a specific subject and are meant to be 
-published and shared with the community. Other users can then add these Round-Abouts to their collection and start 
-quizzes with a randomized selection of questions in their collected Round-Abouts.
+You can only play 7 random questions in [Round-Abouts](editor/003-create-round-about.md). Round-Abouts are small sets of questions on a specific subject (for example: 'Shoes worn by historic figures' or 'Fruits starting with A').  
+They are meant to be published and shared with the community. When you start a game from your collection, the game picks 5 Round-Abouts at random, selects 7 questions from each Round-About, and uses these to generate a random quiz.
 
-If you want to create a custom quiz where all questions are shown in the order you have entered them, you need to
-create a Quiz. In Quizzes you get full control of the order of the rounds and questions, and nothing is randomized.
+If you want to create a custom quiz where all questions are shown in the exact order you’ve entered them, you need to create a [Quiz](editor/004-create-quizzes.md). In Quizzes, you get full control of the order of rounds and questions — nothing is randomized.
 
-## How do I create a quiz?
-To create a quiz, click the 'Create' button on top and then select 'Quiz'. Please note that Quizzes are only available 
-for users with a  Premium license. Round-Abouts are free, but in those rounds you are not able to specify the order or 
-the amount of questions.
+---
 
-If you want to first test out our software before buying a premium account, please check out our Shop and 
-activate the 'Free example quiz'. This will add a demo quiz to your Collection that you will be able to edit to 
-experience our software before buying it.
+## 🔀 Why are the questions asked in a random order?
 
-## Can I get a report of all players answers?
-When using the QuizWitz PRO module you do get an email with a link to a Report that contains all answers that players 
-have given. We do not provide a report for Conference of Party games.
+You have likely created a Round-About. Round-Abouts are meant to be played in random order to keep games fresh and replayable for the community.
 
-## What is the difference between a Premium account and PRO games?
-A premium account allows you to play the regular QuizWitz game with up to 1000 players. (100 in party mode or 1000 in 
-conference mode). These modes should be sufficient for most use cases. We charge a yearly fee for Premium accounts.
+If you want to control question order, create a [Quiz](editor/004-create-quizzes.md). Quizzes allow you to specify the exact sequence of rounds and questions.
 
-Our QuizWitz PRO game modes are aimed towards professional quizmasters who want to take their games to an extra level. 
-Instead of paying a periodic fee, PRO games are charged per player. For more information on pricing of PRO games, 
-please visit our [QuizWitz PRO seats page](https://app.quizwitz.com/seats).
+---
 
-## Can players choose their own name?
-Yes! In Party games, players can choose their name by registering a QuizWitz account on their own smartphone. They 
-can then also change their profile picture that will appear in the game.
+## 🛠️ How do I create a quiz?
 
-Don't want the hassle of one-time registration? Then select the 'Conference' mode (also available in QuizWitz PRO). 
-Players will then first be asked to choose a name before joining the game and won't have to login or register.
+To create a quiz:
+1. Click the **Create** button at the top.
+2. Select **Quiz**.
 
-## How do I join a quiz?
-Please navigate to [www.quizwitz.tv](https://www.quizwitz.tv) and enter your code. Note that you should be able to see the game screen in order 
-to play, as otherwise you might miss essential information.
+Please note: Creating Quizzes is only available for users with a [Premium license](https://www.quizwitz.com/pricing).  
+Round-Abouts are free to create, but you cannot set question order or question amount.
 
-## How can I play a game with my friends?
-QuizWitz is a party game and is meant to be played with a bunch of people sitting in the same room or videostream call.
-Therefor it is not possible to join a game that someone you don't know has started.
+Want to try before you buy?  
+Check the Shop and activate the 'Free example quiz.' This adds a demo quiz to your Collection for you to edit and explore.
 
-To join a game, please go to [www.quizwitz.tv](https://www.quizwitz.tv) and enter the code you see on the game screen.
+---
 
-## How can I make the game screen larger / fullscreen?
-There are two ways to make the game screen larger:
+## 📊 Can I get a report of all players’ answers?
 
-1. Hover over the bottom of the game screen. You should see a slider to control the audio, with on the right a little square. 
-Click the square to enter fullscreen mode.
+If you use [QuizWitz Live](quizmaster/001-introduction.md) or any other PRO game, you’ll receive an email with a link to a detailed report containing all answers players gave.
 
-2. Another way is to select 'Advanced game settings' and to generate a unique link for your quiz. 
-Open this link on any browser to play the game in fullscreen mode.
+Reports are **not** available for Conference or Party games.
 
-## Is there a way to pause the quiz?
-Yes! You can pause the game by moving your mouse cursor to the bottom of the screen. A 'pause' button will appear.
+---
 
-However, if you want even more control of the game, you should check out the 'QuizWitz Live' game mode. In this mode the
-quiz is controlled with the Quizmaster App, giving your complete control of the pacing of the quiz.
+## 💎 What’s the difference between a Premium account and PRO games?
 
-More information on the quizmaster app can be found at [quizwitz.com/quizmaster-app](https://www.quizwitz.com/quizmaster-app).
+- **Premium account** — Lets you play regular QuizWitz games with up to 1000 players (100 in party mode, or 1000 in conference mode).
+- **PRO games** — For professional quizmasters, with extra features and controls. PRO games use a seat-based system and are charged per player.
+
+For more info, see [Seats & Licenses](quizmaster/005-seats.md).
+
+---
+
+## 🧑‍🎤 Can players choose their own name?
+
+Yes! In Party games, players can choose their name by registering a QuizWitz account on their smartphone. They can also change their profile picture.
+
+Prefer not to require registration? Use **Conference mode** (available in PRO and Premium). Here, players pick a name before joining — no registration or login required.
+
+---
+
+## 🔑 How do I join a quiz?
+
+To join a game, go to [quizwitz.tv](https://www.quizwitz.tv) and enter the code you see on the game screen.
+
+**Tip:** You should be able to see the game screen (in person or on a livestream), otherwise you might miss important information.
+
+---
+
+## 🎉 How can I play with my friends?
+
+QuizWitz is designed as a party game for groups — either in the same room or via a video call.  
+You cannot join a random public game.
+
+To play with friends:
+1. Start a game on your device.
+2. Share the code displayed on the main screen with your friends.
+3. Everyone joins at [quizwitz.tv](https://www.quizwitz.tv) using that code.
+
+---
+
+## 🖥️ How can I make the game fullscreen?
+
+There are two ways:
+
+1. **Hover over the bottom of the game screen.** Click the square icon to enter fullscreen mode.
+2. **Use Advanced Game Settings.** Generate a unique link for your quiz using advanced options, and open this link in any browser — this will launch the game in fullscreen.
+
+---
+
+## ⏸️ Is there a way to pause the quiz?
+
+Yes!  
+Move your mouse cursor to the bottom of the game screen — a **pause** button will appear.
+
+**Note:** If the game screen loses focus (for example, you switch browser tabs), the game will also automatically pause for all players. To continue, return to the game tab and unpause using the button at the bottom (hover to reveal).
+
+For even more control (pausing, skipping, etc.), use [QuizWitz Live](quizmaster/001-introduction.md) with the Quizmaster App.
+
+---
+
+## 👥 Can I host a tournament or a conference booth game?
+
+Yes!
+- For **tournament mode** (with a live leaderboard and anytime play), see the [Tournament guide](tutorials/060-tournament.md).
+- For **conference booth games** (ideal for events and expos), see the [Conference Booth tutorial](tutorials/050-conference-booth.md).
+
+---
+
+## 🎨 Can I customize the look of the game?
+
+Absolutely!  
+The easiest way is to use the [Emerald theme](advanced/011-emerald-theme.md) and add your own attachments (backgrounds, logos, music).  
+For full theming, see our [Theming guide](advanced/010-theming.md).
+
+---
+
+## 📱 Can I play or host games on my phone or tablet?
+
+QuizWitz is optimized for computers, especially for hosting games. While you can join as a player on your phone or tablet, we **do not recommend** hosting full games on mobile devices.  
+See [Mobile browsers](quizmaster/010-mobile-browsers.md) for tips if you must use a mobile device.
+
+---
+
+## 🆘 What if my game crashes or hangs?
+
+QuizWitz automatically saves the game state in your browser. If the main game screen crashes or reloads unexpectedly, simply reopen the same game URL in the same browser — you’ll be prompted to resume your game or start over.  
+For more details, see [Live Crash Recovery](099-game-recovery.md).
+
+---
+
+## 📚 Still have questions?
+
+Check out our full [documentation index](/), or [contact support](mailto:support@catlab.be).
