--- a/docs/010-faq.md
+++ b/docs/010-faq.md
@@ -6,134 +6,76 @@ sidebar_position: 10
 
 # Frequently asked questions
 
----
+## Why can I only play 7 questions?
+You can only play 7 random questions in Round-Abouts. Round-Abouts are sets of questions about a specific subject (like, for example, "Shoes worn by historic figures" or "Fruits starting with A"). They are meant to be published and shared with the community. Other players then include these Round-Abouts in their Collection. When they start a game from their collection, the game picks 5 Round-Abouts at random, picks 7 questions from each Round-About, and uses these to generate a random quiz.
 
-## ❓ Why can I only play 7 questions?
-
-You can only play 7 random questions in [Round-Abouts](editor/003-create-round-about.md). Round-Abouts are small sets of questions on a specific subject (for example: 'Shoes worn by historic figures' or 'Fruits starting with A').  
-They are meant to be published and shared with the community. When you start a game from your collection, the game picks 5 Round-Abouts at random, selects 7 questions from each Round-About, and uses these to generate a random quiz.
-
-If you want to create a custom quiz where all questions are shown in the exact order you’ve entered them, you need to create a [Quiz](editor/004-create-quizzes.md). In Quizzes, you get full control of the order of rounds and questions — nothing is randomized.
+If you want to create a custom quiz where all questions are shown in the order you have entered them, you need to create a Quiz. In Quizzes you get full control of the order of the rounds and questions, and nothing is randomized.
 
 ---
 
-## 🔀 Why are the questions asked in a random order?
+## Why are the questions asked in a random order?
+You have likely created a Round-About. Round-Abouts are sets of questions about a specific subject and are meant to be published and shared with the community. Other users can then add these Round-Abouts to their collection and start quizzes with a randomized selection of questions from their collected Round-Abouts.
 
-You have likely created a Round-About. Round-Abouts are meant to be played in random order to keep games fresh and replayable for the community.
-
-If you want to control question order, create a [Quiz](editor/004-create-quizzes.md). Quizzes allow you to specify the exact sequence of rounds and questions.
-
----
-
-## 🛠️ How do I create a quiz?
-
-To create a quiz:
-1. Click the **Create** button at the top.
-2. Select **Quiz**.
-
-Please note: Creating Quizzes is only available for users with a [Premium license](https://www.quizwitz.com/pricing).  
-Round-Abouts are free to create, but you cannot set question order or question amount.
-
-Want to try before you buy?  
-Check the Shop and activate the 'Free example quiz.' This adds a demo quiz to your Collection for you to edit and explore.
+If you want to create a custom quiz where all questions are shown in the order you have entered them, you need to create a Quiz. In Quizzes you get full control of the order of the rounds and questions, and nothing is randomized.
 
 ---
 
-## 📊 Can I get a report of all players’ answers?
+## How do I create a quiz?
+To create a quiz, click the 'Create' button on top and then select 'Quiz'. Please note that Quizzes are only available for users with a **Premium license**. Round-Abouts are free, but in those rounds you are not able to specify the order or the amount of questions.
 
-If you use [QuizWitz Live](quizmaster/001-introduction.md) or any other PRO game, you’ll receive an email with a link to a detailed report containing all answers players gave.
-
-Reports are **not** available for Conference or Party games.
-
----
-
-## 💎 What’s the difference between a Premium account and PRO games?
-
-- **Premium account** — Lets you play regular QuizWitz games with up to 1000 players (100 in party mode, or 1000 in conference mode).
-- **PRO games** — For professional quizmasters, with extra features and controls. PRO games use a seat-based system and are charged per player.
-
-For more info, see [Seats & Licenses](quizmaster/005-seats.md).
+If you want to test out QuizWitz before buying a premium account, check out our Shop and activate the 'Free example quiz'. This will add a demo quiz to your Collection that you will be able to edit and try before you buy.
 
 ---
 
-## 🧑‍🎤 Can players choose their own name?
-
-Yes! In Party games, players can choose their name by registering a QuizWitz account on their smartphone. They can also change their profile picture.
-
-Prefer not to require registration? Use **Conference mode** (available in PRO and Premium). Here, players pick a name before joining — no registration or login required.
+## Can I get a report of all players' answers?
+When using the **QuizWitz Live** or **Conference** game modes (which require seats), you will receive an email with a link to a report containing all answers players have given. We do not provide a report for Party games.
 
 ---
 
-## 🔑 How do I join a quiz?
+## What is the difference between a Premium account, Party game, and Live/Conference games?
+- **Premium account:**  
+  Unlocks all quizmaker features (including creating and editing quizzes, advanced round options, attachments, and more). Premium also allows you to host **Party games** with up to 100 players.
+- **Party game:**  
+  The standard, social game mode. Great for friends, families, or small groups—up to 100 players. Included with a Premium account. No seats are required.
+- **Live and Conference games:**  
+  Designed for professional events, large audiences, and advanced control. Both **require active seats** for each player or team. Seats are not included in the Premium account and must be activated separately.
+    - These modes unlock features like the Quizmaster app, Jury app, detailed reporting, and more.
 
-To join a game, go to [quizwitz.tv](https://www.quizwitz.tv) and enter the code you see on the game screen.
-
-**Tip:** You should be able to see the game screen (in person or on a livestream), otherwise you might miss important information.
-
----
-
-## 🎉 How can I play with my friends?
-
-QuizWitz is designed as a party game for groups — either in the same room or via a video call.  
-You cannot join a random public game.
-
-To play with friends:
-1. Start a game on your device.
-2. Share the code displayed on the main screen with your friends.
-3. Everyone joins at [quizwitz.tv](https://www.quizwitz.tv) using that code.
+For more on seat licensing, visit the [Seats documentation](../advanced/seats).
 
 ---
 
-## 🖥️ How can I make the game fullscreen?
-
-There are two ways:
-
-1. **Hover over the bottom of the game screen.** Click the square icon to enter fullscreen mode.
-2. **Use Advanced Game Settings.** Generate a unique link for your quiz using advanced options, and open this link in any browser — this will launch the game in fullscreen.
-
----
-
-## ⏸️ Is there a way to pause the quiz?
-
-Yes!  
-Move your mouse cursor to the bottom of the game screen — a **pause** button will appear.
-
-**Note:** If the game screen loses focus (for example, you switch browser tabs), the game will also automatically pause for all players. To continue, return to the game tab and unpause using the button at the bottom (hover to reveal).
-
-For even more control (pausing, skipping, etc.), use [QuizWitz Live](quizmaster/001-introduction.md) with the Quizmaster App.
-
----
-
-## 👥 Can I host a tournament or a conference booth game?
-
+## Can players choose their own name?
 Yes!
-- For **tournament mode** (with a live leaderboard and anytime play), see the [Tournament guide](tutorials/060-tournament.md).
-- For **conference booth games** (ideal for events and expos), see the [Conference Booth tutorial](tutorials/050-conference-booth.md).
+- In Party games, players can choose their name by registering a QuizWitz account on their own smartphone (they can also change their profile picture).
+- In Conference mode and Live games, players can choose a name before joining the game, with no registration required.
 
 ---
 
-## 🎨 Can I customize the look of the game?
-
-Absolutely!  
-The easiest way is to use the [Emerald theme](advanced/011-emerald-theme.md) and add your own attachments (backgrounds, logos, music).  
-For full theming, see our [Theming guide](advanced/010-theming.md).
+## How do I join a quiz?
+Go to [www.quizwitz.tv](https://www.quizwitz.tv) and enter the code displayed on the game screen. Make sure you can see the main game screen, or you might miss essential information.
 
 ---
 
-## 📱 Can I play or host games on my phone or tablet?
+## How can I play a game with my friends?
+QuizWitz is designed as a party game to be played with friends, family, or colleagues—either in the same room or via a video call. It is not possible to join a game started by someone you don’t know.
 
-QuizWitz is optimized for computers, especially for hosting games. While you can join as a player on your phone or tablet, we **do not recommend** hosting full games on mobile devices.  
-See [Mobile browsers](quizmaster/010-mobile-browsers.md) for tips if you must use a mobile device.
-
----
-
-## 🆘 What if my game crashes or hangs?
-
-QuizWitz automatically saves the game state in your browser. If the main game screen crashes or reloads unexpectedly, simply reopen the same game URL in the same browser — you’ll be prompted to resume your game or start over.  
-For more details, see [Live Crash Recovery](099-game-recovery.md).
+To join a game, go to [www.quizwitz.tv](https://www.quizwitz.tv) and enter the code you see on the main game screen.
 
 ---
 
-## 📚 Still have questions?
+## How can I make the game screen larger / fullscreen?
+You can enlarge the game screen in two ways:
+1. Hover over the bottom of the game screen to show the control bar, then click the square icon on the right to enter fullscreen mode.
+2. Alternatively, use 'Advanced game settings' to generate a unique link for your quiz. Open this link in any browser for a fullscreen experience.
 
-Check out our full [documentation index](/), or [contact support](mailto:support@catlab.be).
+---
+
+## Is there a way to pause the quiz?
+Yes! Move your mouse cursor to the bottom of the screen. A 'pause' button will appear.
+
+If you want more control, use the **QuizWitz Live** game mode with the Quizmaster App. This gives you full control over the pacing and flow of your quiz.
+
+Learn more about the Quizmaster App [here](../quizmaster/introduction).
+
+---
