Fix incorrect links.

--- a/docs/010-faq.md
+++ b/docs/010-faq.md
@@ -41,7 +41,7 @@ When using the **QuizWitz Live** or **Conference** game modes (which require sea
   Designed for professional events, large audiences, and advanced control. Both **require active seats** for each player or team. Seats are not included in the Premium account and must be activated separately.
     - These modes unlock features like the Quizmaster app, Jury app, detailed reporting, and more.
 
-For more on seat licensing, visit the [Seats documentation](../advanced/seats).
+For more on seat licensing, visit the [Seats documentation](quizmaster/005-seats.md).
 
 ---
 
@@ -76,6 +76,6 @@ Yes! Move your mouse cursor to the bottom of the screen. A 'pause' button will a
 
 If you want more control, use the **QuizWitz Live** game mode with the Quizmaster App. This gives you full control over the pacing and flow of your quiz.
 
-Learn more about the Quizmaster App [here](../quizmaster/introduction).
+Learn more about the Quizmaster App [here](quizmaster/001-introduction.md).
 
 ---
